--- a/blog/templates/blog/post_create.html
+++ b/blog/templates/blog/post_create.html
@@ -1,11 +1,13 @@
 {% extends '_base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block page_title %}
     Add New Post
 {% endblock page_title %}
 
 {% block content %}
-    <div class="container mt-4">
+    <div class="container mt-4 col-md-8">
         <div class="row">
             <div class="col-9">
                 <div class="card shadow my-3 p-5">
@@ -13,7 +15,7 @@
                     <form method="POST">
                         {% csrf_token %}
                         <table>
-                           {{ form.as_table }}
+                            {{ form|crispy }}
                         </table>
 
                         <button type="submit" class="btn btn-primary">Submit</button>
