--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,42 +12,46 @@
     <title>{% block page_title %}{% endblock page_title %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">CodingYar.com</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="{% url 'posts_list' %}">Home</a>
-                    <a class="nav-link" href="{% url 'posts_list' %}">Blog</a>
-                    <a class="nav-link" href="{% url 'post_create' %}">New post</a>
-                </div>
-            </div>
-            <div class="mx-2 text-white">
-                {% if user.is_authenticated %}
-                    Welcom {{ user.username }} | <a class="text-light" href="{% url 'logout' %}">Logout</a>
-                {% else %}
-                    <a class="text-light" href="{% url 'login' %}">Log in</a> | <a class="text-light" href="{% url 'signup' %}">Sign Up</a>
-                {% endif %}
-            </div>
-        </div>
-    </nav>
-
-    <div class="container-fluid bg-info">
-        <div class="row py-3">
-            <div class="col-md-8 col-md-10 mx-auto">
-                <h3 class="my-4 mt-3 text-white">Welcome to Python and Django Blog</h3>
-                <p class="text-light">We share python and django tips and tricks here</p>
-            </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-light">
+    <div class="container-fluid">
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'posts_list' %}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'posts_list' %}">Blog</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'post_create' %}">Add Post</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+        </ul>
+        <div class="mx-2 text-danger">
+            {% if user.is_authenticated %}
+                Welcom {{ user.username }} | <a class="text-danger" href="{% url 'logout' %}">Logout</a>
+            {% else %}
+                <a class="text-danger" href="{% url 'login' %}">Log in</a> |
+                <a class="text-danger" href="{% url 'signup' %}">Sign Up</a>
+            {% endif %}
         </div>
     </div>
+</nav>
 
-    {% block content %}
-    
-    {% endblock content %}
+
+<div class="container-fluid bg-info">
+    <div class="row py-3">
+        <div class="col-md-8 col-md-10 mx-auto">
+            <h3 class="my-4 mt-3 text-white">Welcome to Python and Django Blog</h3>
+            <p class="text-light">We share python and django tips and tricks here</p>
+        </div>
+    </div>
+</div>
+
+{% block content %}
+
+{% endblock content %}
 
 <!-- Optional JavaScript; choose one of the two! -->
 
