--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,20 +1,28 @@
 {% extends '_base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block page_title %}
     Login
 {% endblock %}
 
 {% block content %}
-    <div class="container mt-4">
+    <div class="container mt-3 col-md-4">
         <div class="card shadow my-3 p-5">
-
-            <form action="" method="POST">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <div>
-                    <button type="submit" class="btn btn-success">Log In</button>
+            <div class="card bg-light">
+                <div class="card-body text-center">
+                    <form action="" method="POST">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <div>
+                            <button type="submit" class="btn btn-success">Log In</button>
+                        </div>
+                    </form>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 {% endblock content %}
+
+
+
