--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,20 +1,25 @@
 {% extends '_base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block page_title %}
     Sign Up
 {% endblock %}
 
 {% block content %}
-    <div class="container mt-4">
+    <div class="container mt-9 col-md-6">
         <div class="card shadow my-3 p-5">
-
-            <form action="" method="POST">
-                {% csrf_token %}
-                {{ form.as_table }}
-                <div>
-                    <button type="submit" class="btn btn-success">Sign Up</button>
+            <div class="card bg-light">
+                <div class="card-body text-center">
+                    <form action="" method="POST">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <div>
+                            <button type="submit" class="btn btn-success">Sign Up</button>
+                        </div>
+                    </form>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 {% endblock content %}
