--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,6 +10,8 @@
             <div class="col-9">
 
                 <div class="card shadow my-3 p-5">
+                    <img class="card-img-top" src="{{ post.image.url }}" alt="Card image"
+                         style="width:100%">
                     <h1>{{ post.title }}</h1>
                     <p class="small text-muted mt-2">By: {{ post.author }}</p>
                     <p class="mt-2">{{ post.text }}</p>
