--- a/blog/templates/blog/posts_list.html
+++ b/blog/templates/blog/posts_list.html
@@ -7,38 +7,40 @@
 {% block content %}
     <div class="container mt-4">
         <div class="row">
-            <div class="col-9">
-                {% for post in posts_list %}
-                    <div class="card shadow-sm my-3">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ post.title }}</h5>
-                            <h6 class="card-subtitle mb-2 text-muted small py-2">By: {{ post.outher }}</h6>
-                            <p class="card-text py-3">
-                                {{ post.text }}
-                            </p>
-                            {#<div class="btn btn-sm btn-success">Read More</div>#}
-                            <a href="{% url 'post_detail' post.id %}" class="btn btn-sm btn-success">Read More</a>
+            {% for post in posts_list %}
+                <div class="card m-2" style="max-width: 45%">
+                    <div class="row g-0 h-100" dir="ltr">
+                        <div class="col-md-4">
+                            {% if post.image %}
+                                <img src="{{ post.image.url }}" class="img-fluid rounded-start" alt="...">
+                            {% endif %}
+                        </div>
+                        <div class="col-md-8 h-100">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                <div class="card-body">
+                                    <a class="text-decoration-none" href="{{ post.get_absolute_url }}"><h3
+                                            class="card-title"><strong>{{ post.title }}</strong></h3></a>
+                                    <p class="card-text pt-3">{{ post.text|truncatewords:30 }}</p>
+                                    <p class="text-muted">Author: {{ post.outher }}</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                {% endfor %}
-            </div>
-            <div class="col-3">
-
-                <div class="card my-4">
-                    <h5 class="card-header">About</h5>
-                    <div class="card-body">
-                        <p class="card-text">We love python and django. So we created a blog site to share our
-                            thoughts</p>
-                        <a href="#"
-                           class="btn btn-sm btn-danger">
-                            More...
-                        </a>
-                    </div>
                 </div>
-
+            {% endfor %}
+        </div>
+        <div class="col-3">
+            <div class="card my-4">
+                <h5 class="card-header">About</h5>
+                <div class="card-body">
+                    <p class="card-text">We love python and django. So we created a blog site to share our
+                        thoughts</p>
+                    <a href="#"
+                       class="btn btn-sm btn-danger">
+                        More...
+                    </a>
+                </div>
             </div>
         </div>
     </div>
-
-
 {% endblock content %}
