--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,6 +11,7 @@
         <div class="card shadow my-3 p-5">
             <div class="card bg-light">
                 <div class="card-body text-center">
+                    <h3>Login</h3>
                     <form action="" method="POST">
                         {% csrf_token %}
                         {{ form|crispy }}
